name:                periodic
version:             0.1.0.0
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Utils
                     , Periodic.Connection
                     , Periodic.Types
                     , Periodic.Agent
                     , Periodic.BaseClient
                     , Periodic.Client
                     , Periodic.Job
                     , Periodic.Worker

                     , Periodic.Server
                     , Periodic.Server.Client
                     , Periodic.Server.Scheduler
                     , Periodic.Server.Job
                     , Periodic.Server.Agent
                     , Periodic.Server.Worker
                     , Periodic.Server.FuncList
                     , Periodic.Server.GrabQueue
                     , Periodic.Server.FuncStat
                     , Periodic.Server.JobQueue
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , concurrent-extra
                     , unordered-containers
                     , entropy
                     , aeson
                     , hslogger
                     , unix-time
                     , psqueues
                     , text
  default-language:    Haskell2010

executable periodicd
  hs-source-dirs:      app
  main-is:             periodicd.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , periodic
                     , network
  default-language:    Haskell2010

test-suite periodic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , periodic
                     , bytestring
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
