name:                periodic-client-exe
version:             1.2.5.0
synopsis:            Periodic task system haskell client executables
description:         Periodic task system haskell client executables.
homepage:            https://github.com/Lupino/haskell-periodic/tree/master/periodic-client-exe#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            System,Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable periodic
  hs-source-dirs:      app
  main-is:             periodic.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , binary
                     , unliftio
                     , metro
                     , metro-socket
                     , metro-transport-crypto
  other-modules:       Paths_periodic_client_exe
  default-language:    Haskell2010

executable periodic-run
  hs-source-dirs:      app
  main-is:             periodic-run.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , process
                     , unliftio
                     , deepseq
                     , metro
                     , metro-socket
                     , hslogger
                     , metro-transport-crypto
  other-modules:       Paths_periodic_client_exe
  default-language:    Haskell2010

executable periodic-run-pipe
  hs-source-dirs:      app
  main-is:             periodic-run-pipe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , process
                     , unliftio
                     , metro
                     , metro-socket
                     , map-io
                     , containers
                     , hslogger
                     , metro-transport-crypto
  other-modules:       Paths_periodic_client_exe
  default-language:    Haskell2010

executable periodic-http-bridge
  hs-source-dirs:      app
  main-is:             periodic-http-bridge.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , scotty
                     , warp
                     , data-default-class
                     , streaming-commons
                     , http-types
                     , metro
                     , metro-socket
                     , metro-transport-crypto
  other-modules:       Paths_periodic_client_exe
  default-language:    Haskell2010

executable periodic-mcp
  hs-source-dirs:      app
  main-is:             periodic-mcp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , metro
                     , metro-socket

                     , hs-mcp
                     , aeson
                     , containers
                     , text
                     , transformers
                     , metro-transport-crypto

  other-modules:       Paths_periodic_client_exe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
