name:                periodic-client
version:             1.1.0.0
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Client
                     , Periodic.ClientPool
                     , Periodic.Job
                     , Periodic.Worker

  build-depends:       base >= 4.7 && < 5
                     , periodic-common
                     , bytestring
                     , hslogger
                     , byteable
                     , monad-control
                     , exceptions
                     , transformers
                     , lifted-base
                     , lifted-async

                     , resource-pool
  default-language:    Haskell2010

executable periodic
  hs-source-dirs:      app
  main-is:             periodic.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , boxes
                     , unix-time
                     , binary
  default-language:    Haskell2010

executable periodic-run
  hs-source-dirs:      app
  main-is:             periodic-run.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , process-extras
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
