name:                periodic-common
version:             0.1.0.0
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Utils
                     , Periodic.Connection
                     , Periodic.Types
                     , Periodic.Types.Command
                     , Periodic.Types.ClientType
                     , Periodic.Types.Error
                     , Periodic.Types.Payload
                     , Periodic.Types.Job
                     , Periodic.Socket
                     , Periodic.Transport
                     , Periodic.Transport.XOR
                     , Periodic.Timer
                     , Periodic.Lock
                     , Periodic.IOHashMap
                     , Periodic.IOList
                     , Periodic.Agent
                     , Periodic.TM

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , entropy
                     , unix-time
                     , unordered-containers
                     , store
                     , th-utilities
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
