name:                periodic-common
version:             1.1.0.0
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Utils
                     , Periodic.Connection
                     , Periodic.Types
                     , Periodic.Types.ServerCommand
                     , Periodic.Types.ClientCommand
                     , Periodic.Types.WorkerCommand
                     , Periodic.Types.Internal
                     , Periodic.Types.ClientType
                     , Periodic.Types.Packet
                     , Periodic.Types.Error
                     , Periodic.Types.Job
                     , Periodic.Node
                     , Periodic.Socket
                     , Periodic.Transport
                     , Periodic.Transport.XOR
                     , Periodic.Transport.TLSSetting
                     , Periodic.Transport.TLS
                     , Periodic.Lock
                     , Periodic.IOHashMap
                     , Periodic.IOList
                     , Periodic.Agent

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , entropy
                     , unix-time
                     , unordered-containers
                     , directory

                     , tls
                     , x509
                     , x509-store
                     , pem
                     , data-default-class
                     , x509-validation

                     , byteable
                     , hslogger
                     , hashable
                     , stm

                     , text
                     , binary
                     , transformers
                     , transformers-base
                     , exceptions
                     , monad-control
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
