name:                periodic-common
version:             1.1.5.2
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Types
                     , Periodic.Types.ServerCommand
                     , Periodic.Types.ClientCommand
                     , Periodic.Types.WorkerCommand
                     , Periodic.Types.Internal
                     , Periodic.Types.ClientType
                     , Periodic.Types.Packet
                     , Periodic.Types.Error
                     , Periodic.Types.Job
                     , Periodic.Node
                     , Periodic.Transport.XOR
                     , Periodic.Transport.TLSSetting
                     , Periodic.Transport.TLS
                     , Periodic.Transport.WebSockets
                     , Periodic.IOList
                     , Periodic.CRC32

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , entropy

                     , tls
                     , x509
                     , x509-store
                     , pem
                     , data-default-class
                     , x509-validation

                     , hashable

                     , text
                     , binary
                     , mtl

                     , websockets

                     , vector

                     , metro

                     , unliftio
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
