name:                periodic-server
version:             1.2.0.0
synopsis:            Periodic task system haskell server
description:         Periodic task system haskell server and command peridoicd.
homepage:            https://github.com/Lupino/haskell-periodic/tree/master/periodic-server#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            System,Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Server.Scheduler
                     , Periodic.Server.SchedPool
                     , Periodic.Server.GrabQueue
                     , Periodic.Server.FuncStat
                     , Periodic.Server.Persist
                     , Periodic.Server.Persist.SQLite
                     , Periodic.Server.Persist.PSQL
                     , Periodic.Server.Persist.Memory
                     , Periodic.Server.Persist.Cache
                     , Periodic.Server.Client
                     , Periodic.Server.Types
                     , Periodic.Server.Hook
                     , Periodic.Server
  build-depends:       base >= 4.7 && < 5
                     , periodic-common
                     , bytestring
                     , network
                     , containers
                     , filepath
                     , hslogger
                     , byteable
                     , stm
                     , async
                     , binary
                     , transformers
                     , mtl

                     , direct-sqlite
                     , unliftio
                     , metro
                     , map-io
                     , entropy

                     , base64-bytestring

                     , metro-socket
                     , psql-utils
                     , unix-time
                     , monadlist
  default-language:    Haskell2010

executable periodicd
  hs-source-dirs:      app
  main-is:             periodicd.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , periodic-server
                     , periodic-common
                     , bytestring
                     , unliftio
                     , hslogger
                     , metro
                     , metro-socket
                     , metro-transport-xor
                     , metro-transport-tls
                     , metro-transport-websockets
  other-modules:       Paths_periodic_server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
