name:                periodicd
version:             0.1.0.0
-- synopsis:
description:         Periodic task system haskell client.
homepage:            https://github.com/Lupino/haskell-periodic#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Periodic.Server
                     , Periodic.Server.Client
                     , Periodic.Server.Scheduler
                     , Periodic.Server.Job
                     , Periodic.Server.Agent
                     , Periodic.Server.Worker
                     , Periodic.Server.FuncList
                     , Periodic.Server.GrabQueue
                     , Periodic.Server.FuncStat
                     , Periodic.Server.JobQueue
                     , Periodic.Server.Store
  build-depends:       base >= 4.7 && < 5
                     , periodic-common
                     , bytestring
                     , network
                     , concurrent-extra
                     , unordered-containers
                     , aeson
                     , psqueues
                     , text
                     , acid-state
                     , safecopy
                     , mtl
                     , containers
                     , unix
  default-language:    Haskell2010

executable periodicd
  hs-source-dirs:      app
  main-is:             periodicd.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , periodicd
                     , periodic-common
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/haskell-periodic
